--- a/templates/room.html
+++ b/templates/room.html
@@ -41,28 +41,28 @@
   <div class="container" style="margin-top:50px;">
   
     <div class="row" >
-        <div class="col center">
-          <h1 id="room"></h1>
+        <div class="col">
+          <h1 id="room" class="center"></h1>
         </div>        
     </div>
+    <br>
+    <br>
     <div class="row justify-content-md-center" >
       <div class="col">
         <img  id="player1Avatar" class="rounded-circle" style="width: 130px;" alt="Player 1 Avatar"  />                                                
         <h3  id="player1User" class="rounded-circle" style="width: 130px;" alt="Player 1 User"></h3>                                                 
       </div>
         
-      <!-- <div class="col">
-        <img  id="player2Avatar" class="rounded-circle" style="width: 130px;" alt="Avatar"  />                                                
-        <h3  id="player2User" class="rounded-circle" style="width: 130px;" alt="Player 2 User"></h3>                                                         
+      <div class="col">
+        <img  src="question.png" id="player2Avatar" class="rounded-circle" style="width: 130px;" alt="Avatar"  />                                                
+        <h3  id="player2User" class="rounded-circle" style="width: 130px;" alt="Player 2 User">(waiting for player)</h3>                                                         
           
-      </div>         -->
+      </div>        
     </div>
       </div>        
   </div>
 
-   
-      
-                       
+                          
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
@@ -73,19 +73,23 @@
     const obj = JSON.parse( document.cookie );
        
     const room = Object.keys(obj)[0];
+    const playersNumber = obj[room].length;
+
     const player1Avatar = obj[room][0].avatar;
     const player1User = obj[room][0].player;
-    // const player2Avatar = obj[room][1].avatar;
-    // const player2User = obj[room][1].player;
 
     document.getElementById( "room" ).innerHTML = 'Welcome to ' + room;
     document.getElementById( "player1Avatar" ).src = player1Avatar;  
     document.getElementById( "player1User" ).innerHTML = player1User;
 
-    // document.getElementById( "player2Avatar" ).src = player2Avatar;        
-    // document.getElementById( "player2User" ).innerHTML = player2User;
-
-    console.log(room, player1Avatar, player1User );
+    if ( playersNumber == 2 )
+    {
+      const player2Avatar = obj[room][1].avatar;
+      const player2User = obj[room][1].player;
+      document.getElementById( "player2Avatar" ).src = player2Avatar;        
+      document.getElementById( "player2User" ).innerHTML = player2User;
+    }
+    //console.log(room, player1Avatar, player1User, playersNumber );
 
     
 
