--- a/templates/success_reg.html
+++ b/templates/success_reg.html
@@ -39,19 +39,22 @@
   <h1>VINTAGE ADDICTION</h1>
 
   <div class="container" style="margin-top: 100px;">
-  
-    
-    <!-- <div draggable="true" class="row justify-content-center">
-        <img  id="avatar" class="rounded-circle" style="width: 130px;" alt="Avatar"  />                                        
+      
+    <div class="row center">
+        <h2>USER REGISTERED!</h2>
+        
     </div>
+    <br>
+     <div class="row" >
+      <div class="col">        
+        <a class="btn btn-primary center" href="/login">Login now</a>
+        </div>
+    </div> 
 
-    <div class="row justify-content-center center"  >        
-        <img id="choose" src="choose.png" alt="Choose your room!"  />                                        
-    </div> -->
+</div>
 
-
-
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
 
